--- a/index.html
+++ b/index.html
@@ -10,5 +10,28 @@
     <center>
         <img src="images/imagen_circular_recortada.png" width="15%"><br>
         <h1>welcome to my portafolio </h1></center>
+        <table border="0">
+
+<tr>
+
+<td><label><b>Fullname:</b></label></td>
+
+<td>Joan C. Ayala</td>
+
+</tr>
+
+<td><label><b>Mobile phone:</b></label></td>
+
+<td>+57 3005910463</td>
+
+</tr>
+
+<td><label><b>E-mail:</b></label></td>
+
+<td>joan@gmail.com</td>
+
+</tr>
+
+</table>
 </body>
 </html>
